# Noteapp

./: .copilotignore  .dependency-cruiser.js  .easignore  .env  .env.development  .env.development.bak  .env.example  .env.production.template  .gitignore  Dockerfile  ENV_SETUP.md  GEMINI.md  README.md  SUBSCRIPTION_IMPLEMENTATION_PLAN.md  app.json  commit_message.txt  commit_message_temp.txt  dependency-graph.dot  eas.json  eslint.config.js  fix_b904.py  fix_b904_v2.py  jest.config.js  jest.setup.js  knip.json  openapi.yaml  package-lock.json  package.json  test-hybrid-diff.js  tsconfig.json  typedoc.json  typescript-errors.md
server/: .devcontainer  .env.development  .env.example  .env.production.example  .gcloudignore  .gitignore  Dockerfile  README.md  README_NEW_ARCH.md  calculate_tokens.py  cloudbuild.yaml  deploy-cloudrun.sh  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  start_new_arch.sh  test_auth_verification.py  test_iap_verification.py  test_rate_limiting.py  test_tool_filtering.py
server/alembic/: README  env.py
server/alembic/versions/: 20251122_1622_81ca7c6dcdcc_initial_migration_postgresql.py  20251125_0001_add_token_blacklist_table.py  20251125_0002_add_error_logs_table.py  20251125_0003_add_feedbacks_table.py  20251126_0001_add_vector_documents_table.py  20251126_0002_add_collection_sharing_table.py  20251128_0001_add_anonymous_feedbacks_table.py  20251128_0002_make_error_logs_user_id_nullable.py
server/data/vector_stores/: metadata.json
server/docs/: COLLECTION_SHARING_API.md  DATABASE_MIGRATION.md  DATABASE_REGENERATION.md  JWT_SECRET_SETUP.md  OAUTH_STATE_REDIS_SETUP.md  RAG_POSTGRESQL_MIGRATION.md  RAG_REFACTORING_NOTES.md  利用可能なツール一覧.md
server/docs/Deployment/: DEPLOYMENT.md
server/docs/idea/: RAG_PARAMETER_TUNING.md
server/legacy/: Dockerfile  docker-compose.production.yml  requirements.txt
server/legacy/_llm_legacy/: PHASE1_COMPLETE.md  models.py
server/legacy/auth/: dependencies.py  device_router.py  google_oauth_flow.py  jwt_utils.py  oauth_router.py  router.py  schemas.py  service.py  token_router.py
server/legacy/billing/: billing_router.py  database.py  iap_verification.py  models.py  schemas.py  service.py  validators.py
server/migrations/: 001_add_google_oauth_to_users.py  001_add_google_oauth_to_users.sql
server/new/: Dockerfile.new  alembic.ini  docker-compose.new.yml  mypy.ini
server/requirements/: prod.txt
server/src/: config.py  logger.py  main.py  main_new.py  models.py  services.py  tools.py
(+1478 files in other folders)
